# url_shortner

./: README.md  main.py  pyproject.toml
static/: script.js  styles.css
templates/: index.html
