[tool.poetry]
name = "url-shortner"
version = "0.1.0"
description = "URL Shortner using FAST API Python"
authors = ["Rohan"]
license = "GPLV3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "yes"
fastapi = "^0.111.0"
segno = "^1.6.1"
uvicorn = "^ 0.29.0"
pyshorteners="^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
